# arrrrrmin.netlify.com

./: .gitignore  README.md  config.toml  config.yml  netlify.toml  update_content.py
archetypes/: default.md
code/python-examples/: README.md  build.py  pyproject.toml
code/python-examples/python_examples/albert_pretraining/: README.md  example_001.py
code/python-examples/python_examples/end_to_end_sound_classification/: README.md  example_001.py  example_002.py  example_003.py  example_004.py
code/python-examples/python_examples/github_oath_fastapi/: README.md
code/python-examples/python_examples/moto_mocks/: README.md  example_001.py  example_002.py
code/python-examples/python_examples/oauth_at_cloudfront/: README.md  example_001.py  oauth_at_cloudfront.puml  sample_event.json
code/python-examples/python_examples/pydantic_powers/: README.md  example_001.py  example_002.py  example_003.py  example_004.py  example_005.py  example_006.py  example_007.py
code/python-examples/python_examples/sign_cf_cookies/: README.md  example_001.py  example_002.py  example_003.py  example_004.py  overview.puml  sign_cf_cookies.puml
code/python-examples/python_examples/teacher_forcing_scheduled_sampler/: README.md  example_001.py  example_002.py  example_003.py  example_004.py
content/: about.md  portfolio.md
content/posts/: Intro.md  Projects.md  Skills.md  Work_Experience.md  albert-pretraining.md  albert_pretraining.md  end_to_end_sound_classification.md  github-oauth-fastapi.md  github_oath_fastapi.md  moto_mocks.md  (+7 more)
data/: projects.yml
layouts/: index.html
(+24 files in other folders)
