[tool.poetry]
name = "python-examples"
version = "0.1.0"
description = "Code examples for the sources mentioned in the blog"
authors = ["arrrrrmin <info@dotarmin.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mdx-include = "^1.4.1"
pydantic = "^1.8.2"
moto = "^2.2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
devtools = "^0.8.0"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
